added prerendered form

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="/bundle.css" />
 
     <script defer src="/bundle.js"></script>
+    <!-- prerended form for netlify -->
+    <form name="subscribe" hidden method="POST" data-netlify="true">
+      <input name="email" />
+    </form>
   </head>
 
   <body></body>
