testing netlify forms

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,10 @@
 
     <script defer src="/bundle.js"></script>
   </head>
+  <!-- for netlify bots -->
+  <form name="sign-up" hidden data-netlify="true">
+    <input type="email" name="email" />
+  </form>
 
   <body></body>
 </html>
