finished thank you page

--- a/public/thank-you.html
+++ b/public/thank-you.html
@@ -1,2 +1,30 @@
-<a href="/">Back to Habit Helper</a>
-<h1>Thanks for signing up!</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="./global.css" />
+    <title>Thanks!</title>
+  </head>
+  <style>
+    body {
+      padding-top: 30px;
+      max-width: 600px;
+      margin: auto;
+    }
+  </style>
+  <body>
+    <a href="/">← Back to Habit Helper</a>
+    <p>Thanks, you're signed up for future member-only perks and updates!</p>
+    <h2>Habit Helper can help you more</h2>
+     Habit Helper is still an early demo, and I need your feedback.
+    </p>
+    <p>
+      If you want to help shape it into <i>your</i> perfect tool, I'd love to hear your suggestions.
+    </p>
+    <p>
+Please shoot me an email at <a href="emailto:pjrashidi@gmail.com">pjrashidi@gmail.com</a> and let's chat :)
+    </p>
+  </body>
+</html>
