fixed bad email links

--- a/public/thank-you.html
+++ b/public/thank-you.html
@@ -24,7 +24,7 @@
       If you want to help shape it into <i>your</i> perfect tool, I'd love to hear your suggestions.
     </p>
     <p>
-Please shoot me an email at <a href="emailto:pjrashidi@gmail.com">pjrashidi@gmail.com</a> and let's chat :)
+Please shoot me an email at <a href="mailto:pjrashidi@gmail.com">pjrashidi@gmail.com</a> and let's chat :)
     </p>
   </body>
 </html>
