improved thank you page

--- a/public/thank-you.html
+++ b/public/thank-you.html
@@ -16,15 +16,14 @@
   </style>
   <body>
     <a href="/">← Back to Habit Helper</a>
-    <p>Thanks, you're signed up for future member-only perks and updates!</p>
-    <h2>Habit Helper can help you more</h2>
-     Habit Helper is still an early demo, and I need your feedback.
+    <h2>You're signed up for future perks and updates!</h2>
+    <p>
+      Best of luck with your habits! ❤️
     </p>
     <p>
-      If you want to help shape it into <i>your</i> perfect tool, I'd love to hear your suggestions.
-    </p>
-    <p>
-Please shoot me an email at <a href="mailto:pjrashidi@gmail.com">pjrashidi@gmail.com</a> and let's chat :)
+      As always, feel free to shoot me an email at
+      <a href="mailto:pjrashidi@gmail.com">pjrashidi@gmail.com</a> with any questions, suggestions, or if you just want
+      to chat about your habits :)
     </p>
   </body>
 </html>
